welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:14: error: ')' expected but '(' found.
def replique(T:Array(Color),l:Int):{
                    ^Array1:14: error: '=' expected but ',' found.
def replique(T:Array(Color),l:Int):{
                           ^Array1:29: error: illegal start of simple expression
}
^